--- a/MVC/Areas/Admin/Views/Products/ConfirmDelete.cshtml
+++ b/MVC/Areas/Admin/Views/Products/ConfirmDelete.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MVC.Areas.Admin.Models.DeleteViewModel
-@using (Html.BeginForm("Delete", "ProductCategory", FormMethod.Post, new { id = "formConfirmDelete"}))
+@using (Html.BeginForm("Delete", "Products", FormMethod.Post, new { id = "formConfirmDelete"}))
 {
     <div class="row">
         <div class="col-auto mx-auto">
