--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -192,6 +192,7 @@
 
                                 <div class="dropdown-menu dropdown-menu-right offset-2" aria-labelledby="dropdownMenuLink">
                                     <a class="dropdown-item" href="#modalSignIn" data-toggle="modal">Change account</a>
+                                    <a class="dropdown-item" href="/Orders/Index">Orders</a>
                                     <a class="dropdown-item" href="/Profile">Profile <span class="float-right"><i class="far fa-user"></i></span></a>
                                     <a class="dropdown-item" href="/Login/Logout">Log out <span class="float-right"><i class="fas fa-sign-out-alt"></i></span></a>
                                 </div>
