--- a/MVC/Areas/Admin/Views/Users/Update.cshtml
+++ b/MVC/Areas/Admin/Views/Users/Update.cshtml
@@ -7,7 +7,7 @@
         <div class="col-8 offset-2">
             <div class="form-group">
                 <label for="InputUserIDUU">ID</label>
-                @Html.TextBoxFor(model => model.ID,new { @class = "form-control", @readonly = true })
+                @Html.TextBoxFor(model => model.ID, new { @class = "form-control", @readonly = true })
             </div>
         </div>
     </div>
@@ -17,15 +17,6 @@
                 <label for="InputUserIDUU">User ID</label>
                 @Html.TextBoxFor(model => model.UserID, new { @class = "form-control", id = "InputUserIDUU", placeholder = "Enter user ID" })
                 @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-8 offset-2">
-            <div class="form-group">
-                <label for="InputPasswordUU">Password</label>
-                @Html.PasswordFor(model => model.Password, new { @class = "form-control", id = "InputPasswordUU", placeholder = "Enter password" })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
@@ -81,10 +72,29 @@
                 <label for="InputAddressEU">Address</label>
                 @Html.TextBoxFor(model => model.Address, new { @class = "form-control", id = "InputAddressEU", placeholder = "Enter address" })
                 @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div class="form-group">
+                <label for="InputAddressEU">Role</label>
+                @Html.TextBoxFor(model => model.Role, new { @class = "form-control", id = "InputAddressEU", placeholder = "Like Customer" })
+                @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div class="form-group">
+                <label for="InputAddressEU">Status</label>
+                @Html.TextBoxFor(model => model.Status, new { @class = "form-control"})
+                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger"})
+            </div>
+        </div>
+    </div>
+
+    @Html.HiddenFor(model => model.Active);
 
 
 
