--- a/MVC/Views/Profile/ChangePassword.cshtml
+++ b/MVC/Views/Profile/ChangePassword.cshtml
@@ -8,7 +8,7 @@
         <div class="col-8 offset-1">
             <div class="form-group">
                 <label for="InputEmailSI">Old password</label>
-                @Html.TextBoxFor(model => model.OldPassword, new { @class = "form-control", @id = "InputEmailSI", @placeholder = "Enter old password" })
+                @Html.PasswordFor(model => model.OldPassword, new { @class = "form-control", @id = "InputEmailSI", @placeholder = "Enter old password" })
                 @Html.ValidationMessageFor(model => model.OldPassword, "", new { @class = "text-danger" })
             </div>
         </div>
