--- a/MVC/Views/Profile/Index.cshtml
+++ b/MVC/Views/Profile/Index.cshtml
@@ -32,8 +32,17 @@
         <div class="row">
             <div class="col-8">
                 <div class="form-group">
+                    <label for="InputUserIDUU">Update Avatar</label>
+                    @Html.TextBoxFor(model => model.Image, new { @class = "form-control-file", id = "InputUserIDUU", placeholder = "Enter user ID", type="file" })
+                    @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-8">
+                <div class="form-group">
                     <label for="InputUserIDUU">User ID</label>
-                    @Html.TextBoxFor(model => model.UserID, new { @class = "form-control", id = "InputUserIDUU", placeholder = "Enter user ID" })
+                    @Html.TextBoxFor(model => model.UserID, new { @class = "form-control", id = "InputUserIDUU", placeholder = "Enter user ID",@readonly = true})
                     @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
                 </div>
             </div>
